--- a/HW4/HW4/UI/Promotions/PromoManagementUserControl.xaml
+++ b/HW4/HW4/UI/Promotions/PromoManagementUserControl.xaml
@@ -15,7 +15,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="25"/>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="PromoDataGrid" Grid.Column="1"/>
+        <DataGrid x:Name="PromoDataGrid" Grid.Column="1" Background="LightGray" RowBackground="LightYellow" AlternatingRowBackground="LightBlue"/>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
