--- a/HW4/HW4/App.xaml
+++ b/HW4/HW4/App.xaml
@@ -9,5 +9,10 @@
                 <ResourceDictionary Source="pack://application:,,,/Fluent;Component/Themes/Generic.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
+
+        <Style x:key="white" TargetType="Border">
+            <Setter Property="Background" Value="#ffffff"/>
+            <Setter Property="CornerRadius" Value="15"/>
+        </Style>
     </Application.Resources>
 </Application>
