--- a/HW4/HW4/UI/Orders/PhoneOrder.xaml
+++ b/HW4/HW4/UI/Orders/PhoneOrder.xaml
@@ -39,23 +39,23 @@
                 <TextBlock Text="-" Margin="5,0"/>
                 <DatePicker Name="endDatePicker"/>
             </StackPanel>
-            <Button Content="Search" Name="Search" HorizontalAlignment="Center" Margin="0,5"/>
+            <Button Content="Search" Click="SearchDateRange"  Name="Search" HorizontalAlignment="Center" Margin="0,5"/>
         </StackPanel>
 
         <StackPanel Grid.Column="0" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Center">
-            <ComboBox Width="118" SelectedIndex="3" Margin="0, 20, 0, 0">
+            <ComboBox Name="DateGet" Width="118" SelectedIndex="3" Margin="0, 20, 0, 0" SelectionChanged="DateGet_SelectionChanged">
                 <ComboBoxItem Content="Today" />
                 <ComboBoxItem Content="This Week" />
                 <ComboBoxItem Content="This Month" />
                 <ComboBoxItem Content="All time" />
             </ComboBox>
 
-            <Button Margin="0, 10, 0, 0" Content="Refresh" Width="54"/>
+            <Button Margin="0, 10, 0, 0" Content="Refresh" Click="RefreshOrder" Width="54"/>
         </StackPanel>
 
         <StackPanel Grid.Column="2" Grid.Row="2" Grid.RowSpan="1" VerticalAlignment="Center" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Click="Page" Content="Prev" Margin="0, 0, 5, 0" Width="37" Height="23"/>
-            <Button Click="Page" Content="Next" Margin="10, 0, 0, 0" Width="35" Height="23"/>
+            <Button Name="Prev" Click="Page" Content="Prev" Margin="0, 0, 5, 0" Width="37" Height="23"/>
+            <Button Name="Next" Click="Page" Content="Next" Margin="10, 0, 0, 0" Width="35" Height="23"/>
         </StackPanel>
         <DataGrid Name="OrderView" ItemsSource="{Binding}" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="3">
             <DataGrid.Resources>
@@ -79,6 +79,6 @@
         </DataGrid>
 
 
-        <local:OrderInfo IsEnabled="False" Grid.Column="4" Grid.Row="0" Grid.RowSpan="5" VerticalAlignment="Top" HorizontalAlignment="Center" Height="27"/>
+        <local:OrderInfo Grid.Column="4" Grid.Row="0" Grid.RowSpan="4" VerticalAlignment="Top" HorizontalAlignment="Center" Height="490"/>
     </Grid>
 </UserControl>
